# tiny_fold

./: .gitignore  CMakeLists.txt  README.md  acc.py  acc_synthetic.py  accuracies.py  base_pair_probabilities.py  benchmark.cc  bfgs.py  bfgs_synthetic.py  bpp_matrix.py  bpp_matrix_vienna.py  compare.py  convergence.py  cost_function_plot.py  debug.sh  extract_bpp_vienna.py  filtering.py  g_matrix.py  gen.py  kd_vienna.py  log_partition.py  matrix_vienna.py  module_tinyfold_build.sh  n3_test.py  neldermead.py  nn_unittest.cc  parameters.py  partition.py  partition_N3.py  plot_error.py  pytest_tests.py  random_sequence_generator.py  rna.cc  rna.hh  rna_longarr.cc  rna_longarr.hh  seq.py  sequences.txt  sequences_test.txt  (+18 more)
C/: main.cc  rna.cc  rna.hh  rna1.cc  rna1.hh  unittest.cc
dependent_files/: cost_function_plot.py  gen.py  stochastic_gradient_descent.py  test.py  testing_gradient.py  toy.py  train_toy.py
drafts/: test_sequence_generator.py  toy_N4_nupack_v1.py  toy_analytical.py  training_sequence_generator.py
fix/: stochastic_gradient_descent.py  toy.py  train_toy.py
old/: bfgs.py
python_versions/: README.md  convergence.py  filtering.py  gen.py  log_partition.py  partition.py  pytest_tests.py  stochastic_gradient_descent_timed.py  timings.py
